samples/_failures_safe/1761199795_f3605f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7bd4ca2.c: In function ‘main’:
./samples/SAFE/__tmp_d7bd4ca2.c:161:20: error: missing terminating " character
  161 |             printf("Invalid edge format\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d7bd4ca2.c:161:13: error: expected expression at end of input
  161 |             printf("Invalid edge format\n
      |             ^~~~~~
./samples/SAFE/__tmp_d7bd4ca2.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d7bd4ca2.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d7bd4ca2.c:161:13: error: expected declaration or statement at end of input
